# rust_expedition

./: .gitignore  README.md  diesel.sh  hello.rs  mutable_reference.rs
actix_test1/: Cargo.toml  api.rest
actix_test1/src/: main.rs
auth-server_1/: .env  Cargo.toml  Makefile  docker-compose.yml  restAPi.rest
auth-server_1/migrations/2024-04-14-150906_create_user_invitations/: up.sql
auth-server_1/src/: invitation_handler.rs  main.rs  register_handler.rs  schema.rs  utils.rs
diesel-actix-test1/: .env  Cargo.toml  Makefile  decrypt.sh  docker-compose.yml  encrypted.env  restAPi.rest
diesel-actix-test1/migrations/2024-04-09-121721_create_users/: up.sql
diesel-actix-test1/migrations/2024-04-11-134942_create_users/: up.sql
diesel-actix-test1/src/: db_conn.rs  main.rs  models.rs  schema.rs
diesel-demo/: Cargo.toml  README.md  docker-compose.yml
diesel-demo/src/: lib.rs  models.rs  schema.rs
docker-postgres/: .env  docker-compose.yml
hash_uuid/: Cargo.toml
hash_uuid/src/: main.rs
rust-prac/: Option_vs_Result.rs  borrowTest.rs  hello.rs  human_student.rs  ownershipTest.rs  tcp_server.rs
send-email/: .env  Cargo.toml  README.md
send-email/src/: main.rs
session-test1/: Cargo.toml  README.md
session-test1/src/: main.rs
topics/: Cargo.toml  README.md
topics/src/: arrays.rs  cli.rs  conditionals.rs  constants.rs  imple.rs  loops.rs  main.rs  strings.rs  tuples.rs  vectors.rs
unit_tests/test1/: Cargo.toml  README.md
unit_tests/test2/: Cargo.toml  README.md
unit_tests/test2/src/: main.rs
