[package]
name = "auth-server_1"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.7.1"
actix-web = "4.5.1"
chrono = { version = "0.4.37", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.5", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.11.3"
futures = "0.3.30"
lazy_static = "1.4"
r2d2 = "0.8"
rust-argon2 = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sparkpost = "0.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
time = "0.3"
