[package]
name = "diesel-actix-test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
diesel = { version = "^2", features = ["chrono", "postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "^0", features = ["serde"] }
dotenv = { version = "^0" }
r2d2 = { version = "^0.8"}
lazy_static = "1.4.0"
log = "0.4.20"
diesel_migrations = "2.1.0"