[package]
name = "session-test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-session = { version = "0.9.0", features = ["cookie-session"], default-features = false }
actix-rt = "2.5.0"
rand = "0.8.4"